--- a/service-quotas/s3/package.json
+++ b/service-quotas/s3/package.json
@@ -13,15 +13,20 @@
         "submit": "npm run prepack && cfn submit -vv --region eu-west-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "npx jest --config ../../jest.config.js --rootDir .",
+        "test:integration": "npx npm-run-all -p -r samstart cfntest",
+        "cfntest": "cfn test -vv >> cfn.log",
+        "samstart": "sam local start-lambda -l sam.log",
+        "validate": "cfn validate"
     },
     "dependencies": {
-        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.0/cfn-rpdk-0.3.0.tgz",
-        "class-transformer": "^0.3.1",
-        "community-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.1.0/community-resource-providers-common-0.1.2.tgz"
+        "aws-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.1.0/aws-resource-providers-common-0.2.0.tgz",
+        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz",
+        "class-transformer": "^0.3.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
+        "@types/uuid": "^7.0.3",
         "typescript": "^3.8.3"
     },
     "optionalDependencies": {
