--- a/code-commit/approval-rule-template/community-codecommit-approvalruletemplate.json
+++ b/code-commit/approval-rule-template/community-codecommit-approvalruletemplate.json
@@ -49,38 +49,38 @@
         }
     },
     "properties": {
-        "ApprovalRuleTemplateId": {
+        "approvalRuleTemplateId": {
             "type": "string",
             "description": "The system-generated ID of the approval rule template."
         },
-        "ApprovalRuleTemplateName": {
+        "approvalRuleTemplateName": {
             "type": "string",
             "description": "The name of the approval rule template. Provide descriptive names, because this name is applied to the approval rules created automatically in associated repositories.",
             "minLength": 1,
             "maxLength": 100
         },
-        "ApprovalRuleTemplateDescription": {
+        "approvalRuleTemplateDescription": {
             "type": "string",
             "description": "The description of the approval rule template. Consider providing a description that explains what this template does and when it might be appropriate to associate it with repositories.",
             "minLength": 0,
             "maxLength": 1000
         },
-        "ApprovalRuleTemplateContent": {
+        "approvalRuleTemplateContent": {
             "$ref": "#/definitions/TemplateContent"
         },
-        "CreationDate": {
+        "creationDate": {
             "type": "string",
             "description": "The date the approval rule template was created, in timestamp format."
         },
-        "LastModifiedDate": {
+        "lastModifiedDate": {
             "type": "string",
             "description": "The date the approval rule template was most recently changed, in timestamp format."
         },
-        "LastModifiedUser": {
+        "lastModifiedUser": {
             "type": "string",
             "description": "The Amazon Resource Name (ARN) of the user who made the most recent changes to the approval rule template."
         },
-        "RuleContentSha256": {
+        "ruleContentSha256": {
             "type": "string",
             "description": "The SHA-256 hash signature for the content of the approval rule template."
         }
