--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "lint": "npx eslint --ext .ts,.js .",
         "lint:fix": "npx eslint --fix --ext .ts,.js .",
         "test": "npx jest --runInBand --no-cache",
+        "test:silent": "jest --reporters jest-silent-reporter",
         "test:debug": "npx --node-arg=--inspect jest --runInBand",
         "test:integration": "npx lerna run test:integration -- -vv",
         "validate": "npx lerna run validate -- -vv"
@@ -49,6 +50,7 @@
         "eslint-plugin-prefer-arrow": "^1.2.2",
         "eslint-plugin-prettier": "^3.1.4",
         "jest": "^26.4.2",
+        "jest-silent-reporter": "^0.2.1",
         "lerna": "^3.22.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.1.1",
