--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "lint": "npx eslint --ext .ts,.js .",
         "lint:fix": "npx eslint --fix --ext .ts,.js .",
         "test": "npx jest --runInBand --no-cache",
-        "test:silent": "jest --reporters jest-silent-reporter",
+        "test:silent": "jest --runInBand --reporters jest-silent-reporter",
         "test:debug": "npx --node-arg=--inspect jest --runInBand",
         "test:integration": "npx lerna run test:integration -- -vv",
         "validate": "npx lerna run validate -- -vv"
