--- a/account/alternate-contact/package.json
+++ b/account/alternate-contact/package.json
@@ -30,9 +30,8 @@
     },
     "homepage": "https://github.com/org-formation/aws-resource-providers#readme",
     "dependencies": {
-        "aws-resource-providers-common": "^0.3.0",
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.5.0",
-        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
+        "aws-resource-providers-common": "^0.4.0",
+        "cfn-rpdk": "npm:@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib@^1.0.1",
         "class-transformer": "0.3.1"
     },
     "devDependencies": {
@@ -40,6 +39,6 @@
         "typescript": "^4.1.2"
     },
     "optionalDependencies": {
-        "aws-sdk": "^2.656.0"
+        "aws-sdk": "^2.1058.0"
     }
 }
