--- a/common/package.json
+++ b/common/package.json
@@ -18,16 +18,16 @@
     "author": "org-formation",
     "license": "MIT",
     "dependencies": {
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.5.0"
+        "cfn-rpdk": "npm:@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib@^1.0.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
-        "aws-sdk": "^2.656.0",
+        "aws-sdk": "^2.1058.0",
         "class-transformer": "^0.3.1",
         "typescript": "^4.1.2"
     },
     "peerDependencies": {
-        "aws-sdk": "^2.656.0"
+        "aws-sdk": "^2.1058.0"
     },
     "peerDependenciesMeta": {
         "aws-sdk": {
