--- a/organizations/policy/package.json
+++ b/organizations/policy/package.json
@@ -34,8 +34,8 @@
         "npm": ">=6.0.0"
     },
     "dependencies": {
-        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
-        "aws-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.4.0/aws-resource-providers-common-0.4.0.tgz",
+        "aws-resource-providers-common": "^0.4.0",
+        "cfn-rpdk": "npm:@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib@^1.0.1",
         "class-transformer": "0.3.1",
         "uuid": "^7.0.3"
     },
@@ -45,6 +45,6 @@
         "typescript": "^4.1.2"
     },
     "optionalDependencies": {
-        "aws-sdk": "^2.656.0"
+        "aws-sdk": "^2.1058.0"
     }
 }
