--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     },
     "homepage": "https://github.com/org-formation/aws-resource-providers#readme",
     "dependencies": {
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
+        "cfn-rpdk": "npm:@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib@^1.0.1",
         "class-transformer": "^0.3.1"
     },
     "devDependencies": {
@@ -43,7 +44,7 @@
         "@types/uuid": "^7.0.3",
         "@typescript-eslint/eslint-plugin": "^4.8.1",
         "@typescript-eslint/parser": "^4.8.1",
-        "aws-sdk": "^2.656.0",
+        "aws-sdk": "^2.1058.0",
         "eslint": "^7.13.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-import-resolver-node": "^0.3.3",
@@ -68,5 +69,9 @@
         "printWidth": 200,
         "trailingComma": "es5",
         "endOfLine": "lf"
+    },
+    "volta": {
+        "node": "14.17.3",
+        "npm": "6.14.12"
     }
 }
