--- a/security-hub/action-target/package.json
+++ b/security-hub/action-target/package.json
@@ -20,8 +20,8 @@
         "validate": "cfn validate"
     },
     "dependencies": {
-        "aws-resource-providers-common": "^0.3.0",
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.5.0",
+        "aws-resource-providers-common": "^0.4.0",
+        "cfn-rpdk": "npm:@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib@^1.0.1",
         "class-transformer": "^0.3.1"
     },
     "devDependencies": {
@@ -29,6 +29,6 @@
         "typescript": "^4.1.2"
     },
     "optionalDependencies": {
-        "aws-sdk": "^2.656.0"
+        "aws-sdk": "^2.1058.0"
     }
 }
