--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "test:silent": "npx jest --run-in-band --reporters jest-silent-reporter",
         "test:debug": "npx --node-arg=--inspect jest --runInBand",
         "test:integration": "npx lerna run test:integration -- -vv",
-        "validate": "npx lerna run validate -- -vv"
+        "validate": "npx lerna run validate -- -vv",
+        "postinstall": "patch-package"
     },
     "engines": {
         "node": ">=12.0.0",
@@ -38,6 +39,8 @@
     },
     "devDependencies": {
         "@jurijzahn8019/aws-promise-jest-mock": "^2.4.28",
+        "@swc/core": "^1.2.130",
+        "@swc/jest": "^0.2.17",
         "@tsconfig/node12": "^1.0.7",
         "@types/jest": "^27.4.0",
         "@types/node": "^12.0.0",
@@ -57,9 +60,10 @@
         "jest-silent-reporter": "^0.5.0",
         "lerna": "^3.22.1",
         "npm-run-all": "^4.1.5",
+        "patch-package": "^6.4.7",
         "prettier": "^2.2.1",
+        "regenerator-runtime": "^0.13.9",
         "rimraf": "^3.0.2",
-        "ts-jest": "^27.1.3",
         "typescript": "^4.1.2"
     },
     "prettier": {
