--- a/cloud-formation/delay/package.json
+++ b/cloud-formation/delay/package.json
@@ -30,8 +30,7 @@
     },
     "homepage": "https://github.com/org-formation/aws-resource-providers#readme",
     "dependencies": {
-        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "npm:@org-formation/cfn-rpdk@^1.0.1",
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
         "class-transformer": "0.3.1"
     },
     "devDependencies": {
