--- a/iam/oidc-providers/package.json
+++ b/iam/oidc-providers/package.json
@@ -20,9 +20,8 @@
         "validate": "cfn validate"
     },
     "dependencies": {
-        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "npm:@org-formation/cfn-rpdk@^1.0.1",
-        "aws-resource-providers-common": "^0.4.0",
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
+        "aws-resource-providers-common": "^0.5.0",
         "class-transformer": "0.3.1"
     },
     "devDependencies": {
