--- a/organizations/policy/package.json
+++ b/organizations/policy/package.json
@@ -34,9 +34,8 @@
         "npm": ">=6.0.0"
     },
     "dependencies": {
-        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "npm:@org-formation/cfn-rpdk@^1.0.1",
-        "aws-resource-providers-common": "^0.4.0",
-        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
+        "aws-resource-providers-common": "^0.5.0",
         "class-transformer": "0.3.1",
         "uuid": "^7.0.3"
     },
