--- a/support/support-level/.rpdk-config
+++ b/support/support-level/.rpdk-config
@@ -2,9 +2,15 @@
     "typeName": "Community::Support::SupportLevel",
     "language": "typescript",
     "runtime": "nodejs12.x",
+    "artifact_type": "RESOURCE",
     "entrypoint": "dist/handlers.entrypoint",
     "testEntrypoint": "dist/handlers.testEntrypoint",
     "settings": {
+        "version": false,
+        "subparser_name": null,
+        "verbose": 0,
+        "force": false,
+        "type_name": null,
         "useDocker": false,
         "protocolVersion": "2.0.0"
     }
