--- a/security-hub/standards-control/resource-role.yaml
+++ b/security-hub/standards-control/resource-role.yaml
@@ -15,6 +15,13 @@ Resources:
             Principal:
               Service: resources.cloudformation.amazonaws.com
             Action: sts:AssumeRole
+            Condition:
+              StringEquals:
+                aws:SourceAccount:
+                  Ref: AWS::AccountId
+              StringLike:
+                aws:SourceArn:
+                  Fn::Sub: arn:${AWS::Partition}:cloudformation:${AWS::Region}:${AWS::AccountId}:type/resource/Community-SecurityHub-StandardsControl/*
       Path: "/"
       Policies:
         - PolicyName: ResourceTypePolicy
@@ -23,7 +30,9 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
+                - "securityhub:BatchUpdateFindings"
                 - "securityhub:DescribeStandardsControls"
+                - "securityhub:GetFindings"
                 - "securityhub:UpdateStandardsControl"
                 Resource: "*"
 Outputs:
