--- a/security-hub/master/resource-role.yaml
+++ b/security-hub/master/resource-role.yaml
@@ -15,6 +15,13 @@ Resources:
             Principal:
               Service: resources.cloudformation.amazonaws.com
             Action: sts:AssumeRole
+            Condition:
+              StringEquals:
+                aws:SourceAccount:
+                  Ref: AWS::AccountId
+              StringLike:
+                aws:SourceArn:
+                  Fn::Sub: arn:${AWS::Partition}:cloudformation:${AWS::Region}:${AWS::AccountId}:type/resource/Community-SecurityHub-Master/*
       Path: "/"
       Policies:
         - PolicyName: ResourceTypePolicy
@@ -23,8 +30,9 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                - "securityhub:acceptinvitation"
-                - "securityhub:listinvitations"
+                - "securityhub:AcceptInvitation"
+                - "securityhub:DeleteInvitations"
+                - "securityhub:ListInvitations"
                 Resource: "*"
 Outputs:
   ExecutionRoleArn:
